--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,3 +29,77 @@
   color: #e74c3c !important;
   float: left;
 }
+
+.item-avatar > i:first-child {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  max-width: 40px;
+  max-height: 40px;
+  width: 100%;
+  border-radius: 50%;
+}
+
+.map-holder {
+  margin: 0;
+}
+
+.map-area {
+  padding: 0;
+  width: 100%;
+  height: 400px;
+}
+
+a.home-cta {
+  background-color: #e74c3c;
+  color: white;
+  opacity: 1;
+}
+
+a:hover.home-cta {
+  opacity: 0.7;
+  color: white;
+}
+
+.view-content {
+  /*background-color: #f2eceb;*/
+  background-color: #F5B0A4;
+}
+
+#login-container {
+  position: absolute;
+  width: 100%;
+  top: 0px;
+  left: 0;
+  margin-left: 0;
+  z-index: 1000;
+}
+
+#login-container .block {
+  background-color: rgba(252, 250, 250, 1);
+  border-top: solid 2px #E63232;
+  border-bottom: solid 1px #E63232;
+  padding: 0px;
+}
+
+#login-container .login-title {
+  background-color: rgba(252, 250, 250, 0.4);
+}
+
+#login-container input {
+  background-color: transparent;
+}
+
+#login-container .form-bordered .form-group.form-actions {
+  background-color: rgba(252, 250, 250, 0.7);
+}
+
+.header-item .left-buttons img {
+  height: 100%;
+}
+
+.header-item .left-buttons .title {
+  text-align: left;
+}
+
+/*.location-feed li:nth;*/
