--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -1,9 +1,12 @@
 <ion-view>
     <ion-side-menus ng-controller="MainCtrl">
 
-      <ion-pane ion-side-menu-content drag-content="true">
-        <ion-nav-bar class="nav-title-slide-ios7" ng-init="uiPage = {}">
+      <ion-side-menu-content drag-content="true">
+        <ion-nav-bar ng-init="uiPage = {}">
           <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> </ion-nav-back-button>
+          <ion-nav-buttons side="left">
+            <h1 class="title"><img src="./img/logo.png" img-cache></h1>
+          </ion-nav-buttons>
           <ion-nav-buttons side="right">
               <div class="nav-buttons-primary ">
                 <button class="button button-icon" ng-click="select_up_action()">
@@ -19,13 +22,13 @@
           </ion-nav-buttons>
           <div class="bar bar-subheader themed-background-fire search-header item-input-inset" ng-show="uiPage.showSearchSubheader">
             <label class="item-input-wrapper themed-background-fire">
-              <i class="icon ion-ios7-search placeholder-icon"></i>
+              <i class="icon ion-search placeholder-icon"></i>
               <input type="search" placeholder="Search">
             </label>
           </div>
         </ion-nav-bar>
         <ion-nav-view name="viewContent" animation="slide-left-right"></ion-nav-view>
-      </ion-pane>
+      </ion-side-menu-content>
 
       <ion-side-menu side="left">
         <ion-content id="sidebar" class="">
@@ -33,13 +36,13 @@
             <ion-item nav-clear menu-close ng-href="#" active-href class="">
               Welcome
             </ion-item>
-            <ion-item nav-clear menu-close ng-href="#/app/auth/login" active-href class="">
+            <ion-item nav-clear menu-close ng-href="#/auth/login" active-href class="">
               Sign In
             </ion-item>
-            <ion-item nav-clear menu-close ng-href="#/app/auth/register" active-href class="">
+            <ion-item nav-clear menu-close ng-href="#/auth/register" active-href class="">
               Register
             </ion-item>
-            <ion-item nav-clear menu-close ng-href="#/app/auth/forgotpw" active-href class="">
+            <ion-item nav-clear menu-close ng-href="#/auth/forgotpw" active-href class="">
               Forgot Password
             </ion-item>
             <ion-item nav-clear menu-close ng-href="#/app/home" active-href class="">
@@ -48,7 +51,7 @@
             <ion-item nav-clear menu-close ng-href="#/app/locations" active-href class="">
               Location Feed
             </ion-item>
-            <ion-item nav-clear menu-close ng-href="#/app/location" active-href class="">
+            <ion-item nav-clear menu-close ng-href="#/app/location/01" active-href class="">
               Location Profile
             </ion-item>
             <ion-item nav-clear menu-close ng-href="#/app/me" active-href class="">
