--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,11 +1,6 @@
   <ion-content class="has-header view-content has-subheader" scroll="false">
     <div class="list card has-header map-holder">
 
-      <div class="item item-avatar">
-        <i class="fa fa-spinner fa-spin fa-3x"></i>
-        <h2>Ozone E-Center</h2>
-        <p>Yaba, Lagos</p>
-      </div>
 
       <div class="item item-body map-area">
         <app-map style="height:400px;"
@@ -17,7 +12,7 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-only">
-        <a class="tab-item home-cta" href="#">
+        <a class="tab-item home-cta" href="#" ng-click="pingMsg()">
           <i class="fa fa-map-marker fa-3x"></i>
 
         </a>
