--- a/www/templates/auth/forgotpw.html
+++ b/www/templates/auth/forgotpw.html
@@ -1,6 +1,6 @@
 
 
-  <ion-content ng-controller="RegisterLoginCtrl" class="login-form" scroll="false" has-header="false" padding="false" id="login-modal" ng-init="isLogin = true">
+  <ion-content class="login-form animation-fadeInQuickInv" scroll="false" has-header="false" padding="false" id="login-modal" ng-init="isLogin = true">
     <img src="img/backgrounds/login_full_bg.jpg" alt="Login Full Background" class="full-bg animation-pulseSlow">
     <div id="login-container" class="animation-fadeIn">
                 <!-- Login Title -->
@@ -22,8 +22,8 @@
                         <div class="col-xs-12 text-right">
                           <button type="submit" class="button button-block button-clear button-assertive">Request Password</button>
                           <div class="button-bar">
-                            <button type="submit" class="button button-clear button-dark">Login</button>
-                            <button type="submit" class="button button-clear button-dark">Register</button>
+                            <a type="submit" class="button button-clear button-dark" ui-sref="auth.login">Login</a>
+                            <a type="submit" class="button button-clear button-dark" ui-sref="auth.register">Register</a>
                           </div>
                         </div>
                     </div>
