about to add crosswalk

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-only">
-        <a class="tab-item home-cta" href="#" ng-click="pingMsg()">
+        <a class="tab-item home-cta" href="#" ng-click="tagPopOver()">
           <i class="fa fa-map-marker fa-3x"></i>
 
         </a>
