--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -20,7 +20,7 @@
                 </button>
               </div>
           </ion-nav-buttons>
-          <div class="bar bar-subheader themed-background-fire search-header item-input-inset" ng-show="uiPage.showSearchSubheader">
+          <div class="bar bar-subheader themed-background-fire search-header item-input-inset">
             <label class="item-input-wrapper themed-background-fire">
               <i class="icon ion-search placeholder-icon"></i>
               <input type="search" placeholder="Search">
@@ -33,7 +33,7 @@
       <ion-side-menu side="left">
         <ion-content id="sidebar" class="">
           <ion-list class="sidebar-nav">
-            <ion-item nav-clear menu-close ng-href="#" active-href class="">
+            <ion-item nav-clear menu-close ng-href="#/app/welcome" active-href class="">
               Welcome
             </ion-item>
             <ion-item nav-clear menu-close ng-href="#/auth/login" active-href class="">
