--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,7 +4,7 @@
 
       <div class="item item-body map-area">
         <app-map style="height:400px;"
-            center="basel"
+            center="base"
             zoom="15"
             markers="whoiswhere"
           >
