--- a/www/templates/auth/forgotpw.html
+++ b/www/templates/auth/forgotpw.html
@@ -22,8 +22,8 @@
                         <div class="col-xs-12 text-right">
                           <button type="submit" class="button button-block button-clear button-assertive">Request Password</button>
                           <div class="button-bar">
-                            <a type="submit" class="button button-clear button-dark" ui-sref="auth.login">Login</a>
-                            <a type="submit" class="button button-clear button-dark" ui-sref="auth.register">Register</a>
+                            <a type="submit" class="button button-clear button-dark" ui-sref="app.auth.login">Login</a>
+                            <a type="submit" class="button button-clear button-dark" ui-sref="app.auth.register">Register</a>
                           </div>
                         </div>
                     </div>
