--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -14,8 +14,8 @@
                     <!-- Login Form -->
                     <div class="list">
                       <label class="item item-input item-floating-label">
-                        <span class="input-label">Username / Email</span>
-                        <input type="text" placeholder="Username / Email" ng-model="form.email" required>
+                        <span class="input-label"> Email</span>
+                        <input type="text" placeholder="Email" ng-model="form.email" required>
                       </label>
                       <label class="item item-input item-floating-label">
                         <span class="input-label">Password</span>
@@ -26,8 +26,8 @@
                         <div class="col-xs-12 text-right">
                           <button type="submit" class="button button-block button-clear button-assertive" ng-click="loginBtn(form)" ng-disabled="(form.email.length == 0) || (form.password.length == 0) ">Login</button>
                           <div class="button-bar">
-                            <a type="submit" class="button button-clear button-stable" ui-sref="auth.register">Register</a>
-                            <a type="submit" class="button button-clear button-stable" ui-sref="auth.forgotpw">Forgot Password?</a>
+                            <a type="submit" class="button button-clear button-stable" ui-sref="app.auth.register">Register</a>
+                            <a type="submit" class="button button-clear button-stable" ui-sref="app.auth.forgotpw">Forgot Password?</a>
                           </div>
                         </div>
                     </div>
