--- a/www/templates/auth/register.html
+++ b/www/templates/auth/register.html
@@ -30,8 +30,8 @@
                         <div class="col-xs-12 text-right">
                           <button type="submit" class="button button-block button-clear button-assertive" ng-click="RegisterBtn(form)" >Register</button>
                           <div class="button-bar">
-                            <a type="submit" class="button button-clear button-dark" ui-sref="auth.login">Login</a>
-                            <a type="submit" class="button button-clear button-dark" ui-sref="auth.forgotpw">Forgot Password?</a>
+                            <a type="submit" class="button button-clear button-dark" ui-sref="app.auth.login">Login</a>
+                            <a type="submit" class="button button-clear button-dark" ui-sref="app.auth.forgotpw">Forgot Password?</a>
                           </div>
                         </div>
                     </div>
