small settings fix

--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <div class="is-request-loading" ng-show="isRequesting">
+    <div class="is-request-loading" ng-show="mainCfg.isRequesting">
       <i class="fa fa-circle-o-notch fa-spin"></i>
     </div>
     <ion-side-menus ng-controller="MainCtrl">
