--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -12,7 +12,7 @@
                           <small>1 hour ago</small>
                           <span class="text-success" data-toggle="tooltip" title="From Mobile"><i class="fa fa-mobile"></i></span>
                       </span>
-                      <strong><a href="page_ready_user_profile.html">Adventurer</a> checked in at <a href="javascript:void(0)">Cafe-Bar</a>.</strong>
+                      <strong><a href="page_ready_user_profile.html">{{l.name}}</a> on tagChief since <a href="javascript:void(0)">{{l.dateAdded}}r</a>.</strong>
                   </p>
                   <div id="gmap-checkin" class="gmap push"></div>
                   <p>
