--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -26,7 +26,7 @@
                         <div class="col-xs-12 text-right">
                           <button type="submit" class="button button-block button-clear button-assertive" ng-click="loginBtn(form)" ng-disabled="(form.email.length == 0) || (form.password.length == 0) ">Login</button>
                           <div class="button-bar">
-                            <a type="submit" class="button button-clear button-stable" ui-sref="app.auth.register">Register</a>
+                            <a type="submit" class="button button-clear button-stable" ui-sref="app.auth.register">Join tagChief</a>
                             <a type="submit" class="button button-clear button-stable" ui-sref="app.auth.forgotpw">Forgot Password?</a>
                           </div>
                         </div>
