--- a/www/templates/splash-first.html
+++ b/www/templates/splash-first.html
@@ -11,7 +11,7 @@
       <div class="splash-doc">
         <div class="splash-actions" ng-style="splashActionDiv">
           <a ui-sref="app.auth.login" class="button button-assertive button-block" ng-class="{'button-full': splashImgIsP, 'button-150': !splashImgIsP}">Sign in</a>
-          <a ui-sref="app.auth.register" class="button button-dark button-block" ng-class="{'button-full': splashImgIsP, 'button-150': !splashImgIsP}">Register</a>
+          <a ui-sref="app.auth.register" class="button button-dark button-block" ng-class="{'button-full': splashImgIsP, 'button-150': !splashImgIsP}">Join tagChief</a>
         </div>
       </div>
     </div>
