should refresh marker when new coordinates arive

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,14 +3,9 @@
 
 
       <div class="item item-body map-area">
-        <app-map style="height:400px;"
-            center="base"
-            zoom="15"
-            markers="whoiswhere"
-          >
+        <app-map style="height:400px;" markers="whoiswhere" >
         </app-map>
       </div>
-
       <div class="item tabs tabs-secondary tabs-icon-only">
         <a class="tab-item home-cta" href="#" ng-click="tagPopOver()">
           <i class="fa fa-map-marker fa-3x"></i>
