trying out auto focus

--- a/www/templates/auth/forgotpw.html
+++ b/www/templates/auth/forgotpw.html
@@ -15,7 +15,7 @@
                     <div class="list">
                       <label class="item item-input item-floating-label">
                         <span class="input-label">Username / Email / Phone Number</span>
-                        <input type="text" placeholder="Username / Email / Phone Number">
+                        <input type="text" placeholder="Username / Email / Phone Number" autofocus required>
                       </label>
                     </div>
                     <div class="form-group form-actions">
