--- a/www/templates/auth/register.html
+++ b/www/templates/auth/register.html
@@ -15,7 +15,7 @@
                     <div class="list">
                       <label class="item item-input item-floating-label">
                         <span class="input-label">Email</span>
-                        <input type="email" placeholder="Email" ng-model="form.email" required>
+                        <input type="email" placeholder="Email" ng-model="form.email" required autofocus>
                       </label>
                       <label class="item item-input item-floating-label">
                         <span class="input-label">Mobile Number</span>
