--- a/www/templates/inc/tag-popover.html
+++ b/www/templates/inc/tag-popover.html
@@ -1,6 +1,6 @@
 <div class="list">
   <label class="item item-input">
-    <input type="text" placeholder="Name" ng-model="tagInput.name">
+    <input type="text" placeholder="Name" ng-model="tagInput.name" autofocus>
   </label>
   <label class="item item-input">
     <input type="text" placeholder="Category" ng-model="tagInput.category">
