--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -15,7 +15,7 @@
                     <div class="list">
                       <label class="item item-input item-floating-label">
                         <span class="input-label"> Email</span>
-                        <input type="text" placeholder="Email" ng-model="form.email" required>
+                        <input type="text" placeholder="Email" ng-model="form.email" required autofocus>
                       </label>
                       <label class="item item-input item-floating-label">
                         <span class="input-label">Password</span>
