--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -1,10 +1,14 @@
 <ion-content class="has-header view-content" style="margin-top: 44px;" scroll="true">
-      <div class="no-content no-list-locations">
+      <ion-refresher
+        pulling-text="Pull to refresh..."
+        on-refresh="loadLocations({pulled: true})">
+      </ion-refresher>
+      <div class="no-content no-list-locations" ng-hide="locationFeed.length > 0">
         <h3>No Locations to show</h3>
       </div>
       <ul class="list location-feed">
           <!-- Check in -->
-          <li class="item item-avatar" ng-repeat="l in locationFeed">
+          <li class="item item-avatar" ng-repeat="l in locationFeed" ng-show="locationFeed.length > 0">
               <img src="./img/placeholders/avatars/avatar3.jpg" alt="Avatar" class="img-circle" img-cache>
               <div class="media-body">
                   <p class="push-bit">
@@ -16,8 +20,7 @@
                   </p>
                   <div id="gmap-checkin" class="gmap push"></div>
                   <p>
-                      <a href="javascript:void(0)" class="button button-small button-default"><i class="fa fa-thumbs-o-up"></i> Like</a>
-                      <a href="javascript:void(0)" class="button button-small button-default"><i class="fa fa-comments-o"></i> Comment</a>
+                      <a href="javascript:void(0)" class="button button-small button-default" ng-click="openCheckInModal(l._id)"><i class="fa fa-comments-o"></i> Check In</a>
                       <a href="javascript:void(0)" class="button button-small button-default"><i class="fa fa-share-square-o"></i> Share</a>
                   </p>
               </div>
