--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,14 +3,14 @@
 
 
       <div class="item item-body map-area">
-        <app-map style="height:400px;" markers="whoiswhere" >
+        <app-map style="height:400px;" markers="whoiswhere" is-gmaps-loaded="viewParams.isLoadingGmaps" error-loading-gmaps="viewParams.errorLoadingGmaps">
         </app-map>
       </div>
-      <div class="item tabs tabs-secondary tabs-icon-only">
-        <a class="tab-item home-cta" href="#" ng-click="tagPopOver()">
-          <i class="fa fa-map-marker fa-3x"></i>
-
-        </a>
+      <div class="item home-tag-item" ng-hide="viewParams.isLoadingGmaps || viewParams.errorLoadingGmaps">
+          <button class="button button-assertive button-full home-cta" href="#" ng-click="tagPopOver()">
+            <i class="fa fa-map-marker fa-3x"></i>
+            Tag Here
+          </button>
       </div>
 
     </div>
