--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -4,7 +4,8 @@
   <!-- For an image header add the class 'content-header-media' and an image as in the following example -->
   <div class="location-profile content-header content-header-media">
       <div class="header-section">
-          <h1>Ikeja Shopping Mall <br><small>Alausa, Ikeja, Lagos</small></h1>
+          <h1>{{locationData.name}}</h1>
+          <p city-state="locationData">{{locationData.formatted_address}}</p>
       </div>
       <img src="img/placeholders/headers/profile_header.jpg" alt="header image" class="animation-pulseSlow">
       <!-- For best results use an image with a resolution of 2560x248 pixels (You can also use a blurred image with ratio 10:1 - eg: 1000x100 pixels - it will adjust and look great!) -->
@@ -50,13 +51,13 @@
         <div class="list">
           <label class="item item-input">
             <span class="input-label">Info</span>
-            <textarea readonly="readonly">
-              Proin ac nibh rutrum lectus rhoncus eleifend. Sed porttitor pretium venenatis. Suspendisse potenti. Aliquam quis ligula elit. Aliquam at orci ac neque semper dictum. Sed tincidunt scelerisque ligula, et facilisis nulla hendrerit non.
-            </textarea>
+            <p readonly="readonly">
+              {{locationData.description}}
+            </p>
           </label>
           <label class="item item-input">
             <span class="input-label">Category</span>
-            <input type="text" value="Music, Shopping, Cinemas" readonly="readonly">
+            <input type="text" value="Music, Shopping, Cinemas" readonly="readonly" ng-model="locationData.category">
           </label>
           <label class="item item-input">
             <span class="input-label">Specials</span>
