finished location profile

--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -3,7 +3,7 @@
   <ion-pane>
       <ion-nav-bar ng-init="uiPage = {}">
         <ion-nav-title align-title="center">
-          <h4>{{mainCfg.title}}</h4>
+          <h4>{{mainCfg.pageTitle}}</h4>
         </ion-nav-title>
           <div class="header-logo nav-bar-block">
             <div class="bar deep-ugly-red">
