--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-  <ion-content class="has-header view-content has-subheader" scroll="false" ng-init="$scope.$parent.mainCfg.title = 'My Location'">
+  <ion-content class="has-header view-content has-subheader" scroll="false">
     <div class="list card has-header map-holder">
 
 
