--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -1,4 +1,4 @@
-<ion-content class="has-header view-content" style="margin-top: 44px;" scroll="true" ng-init="$scope.$parent.mainCfg.title = 'Near-by Location'">
+<ion-content class="has-header view-content" style="margin-top: 44px;" scroll="true" >
       <ion-refresher
         pulling-text="Pull to refresh..."
         on-refresh="loadLocations({pulled: true})">
