--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -34,7 +34,7 @@
             <ion-nav-view name="notificationsContent" animation="slide-left-right"></ion-nav-view>
           </ion-tab>
 
-          <ion-tab title="My Account" icon-on="ion-person" icon-off="ion-person"href="#/app/tc/me">
+          <ion-tab title="My Account" icon-on="ion-person" icon-off="ion-person"href="#/app/tc/account">
             <ion-nav-view name="accountContent" animation="slide-left-right"></ion-nav-view>
           </ion-tab>
       </ion-tabs>
