--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
-  <ion-content class="has-header view-content has-subheader" scroll="false">
+  <ion-content class="has-header view-content has-subheader" scroll="false" style="background-color: #52152a">
     <div class="list card has-header map-holder">
 
 
-<!--       <div class="item item-body map-area">
+    <div class="item item-body map-area">
         <app-map style="height:400px;" markers="whoiswhere" is-gmaps-loaded="viewParams.isLoadingGmaps" error-loading-gmaps="viewParams.errorLoadingGmaps">
         </app-map>
       </div>
@@ -11,7 +11,7 @@
             <i class="fa fa-map-marker fa-3x"></i>
             Tag Here
           </button>
-      </div> -->
+    </div>
 
     </div>
   </ion-content>
