--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -33,7 +33,7 @@
 
         <span class="xtx">0</span>
         <span class="xtxx green-round-icon">
-          likes
+          good
         </span>
 
       </div>
@@ -43,7 +43,7 @@
         </div>
         <span class="xtx">0</span>
         <span class="xtxx red-round-icon">
-          dislikes
+          poor
         </span>
 
       </div>
