--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -17,14 +17,17 @@
                   <p class="tagged-by-alt-text">
                     tagged by @tagChief
                   </p>
+                  <p class="tagged-by-alt-text">
+                    {{::l.category}}
+                  </p>
               </div>
               <div class="media-action-score">
                       <a class="button-block">
-                        <i class="icon ion-heart icon-assertive"></i>
+                        <i class="fa fa-star-o icon-assertive"></i>
                         <span class="icon-assertive">0</span>
                       </a>
                       <a class="button-block">
-                        <i class="icon ion-chatboxes icon-default"></i>
+                        <i class="icon ion-checkmark icon-default"></i>
                         <span class="icon-default">0</span>
                       </a>
               </div>
