--- a/www/templates/inc/maps-holder.html
+++ b/www/templates/inc/maps-holder.html
@@ -6,7 +6,7 @@
     </p>
     <p>
       <button class="button button-outline button-dark is-loading-btn" ng-show="isLoadingGmaps && !errorLoadingGmaps" ng-disabled="isLoadingGmaps"  ng-class="{'animation-pulse': false}">Loading Maps</button>
-      <button class="button button-dark is-loading-btn" ng-show="errorLoadingGmaps" ng-click="createMap()">Reload Map</button>
+      <button class="button button-dark is-loading-btn" ng-show="errorLoadingGmaps" ng-click="reloadState()">Reload Map</button>
     </p>
   </div>
 
