--- a/www/templates/inc/tag-popover.html
+++ b/www/templates/inc/tag-popover.html
@@ -1,27 +1,56 @@
 <div class="list">
-  <label class="item item-input">
-    <input type="text" placeholder="Name" ng-model="tagInput.name" autofocus>
-  </label>
   <label class="item item-input item-select">
     <div class="input-label" style="color: #B5B5B5;border: none;font-weight: 400;font-size: 15px;">
       Category
     </div>
     <select placeholder="Category" ng-model="tagInput.category">
-      <option>
+      <option value="pollbooth">
         Polling Booths
       </option>
-      <option>Hiardressing Saloons</option>
-      <option>Bars/ Lounge</option>
-      <option>Spa</option>
-      <option>Buka/ Restaurant</option>
-      <option>Hotel</option>
-      <option>ATM</option>
+      <option value="default">Hairdressing Saloons</option>
+      <option value="default">Bars/ Lounge</option>
+      <option value="default">Spa</option>
+      <option value="default">Buka/ Restaurant</option>
+      <option value="default">Hotel</option>
+      <option value="atm">ATM</option>
     </select>
   </label>
-  <label class="item item-input">
+  <!-- PollBooth -->
+  <label class="item item-input" ng-show="tagInput.category == 'pollbooth'" ng-disabled="tagInput.category !== 'pollbooth'" >
+    <input type="text" placeholder="Polling Unit ID" ng-model="tagInput.name" autofocus>
+  </label>
+  <label class="item item-input" ng-show="tagInput.category == 'pollbooth'" ng-disabled="tagInput.category !== 'pollbooth'">
+    <input type="text" placeholder="Ward" ng-model="tagInput.ward">
+  </label>
+  <label class="item item-input" ng-show="tagInput.category == 'pollbooth'" ng-disabled="tagInput.category !== 'pollbooth'">
+    <input type="text" placeholder="LGA" ng-model="tagInput.lga">
+  </label>
+  <!-- ATM -->
+  <label class="item item-input" ng-show="tagInput.category == 'atm'" ng-disabled="tagInput.category !== 'atm'" >
+    <input type="text" placeholder="Bank" ng-model="tagInput.name" autofocus>
+  </label>
+  <label class="item item-input" ng-show="tagInput.category == 'atm'" ng-disabled="tagInput.category !== 'atm'" >
+    <input type="text" placeholder="Machine Brand" ng-model="tagInput.machine_brand" autofocus>
+  </label>
+  <label class="item item-input item-select" ng-show="tagInput.category == 'atm'" ng-disabled="tagInput.category !== 'atm'">
+    <div class="input-label" style="color: #B5B5B5;border: none;font-weight: 400;font-size: 15px;">
+      Branch/Offsite
+    </div>
+    <select placeholder="Branch/Offsite" ng-model="tagInput.offsite_branch">
+      <option value="branch">
+        Bank Branch
+      </option>
+      <option value="offsite">Offsite</option>
+    </select>
+  </label>
+  <!-- Default -->
+  <label class="item item-input" ng-show="tagInput.category == 'default'" ng-disabled="tagInput.category !== 'default'" >
+    <input type="text" placeholder="Name" ng-model="tagInput.name" autofocus>
+  </label>
+  <label class="item item-input" ng-show="tagInput.category == 'default'" ng-disabled="tagInput.category !== 'default'" >
     <input type="text" placeholder="Specials" ng-model="tagInput.specials">
   </label>
-  <label class="item item-input">
+  <label class="item item-input" ng-show="tagInput.category == 'default'" ng-disabled="tagInput.category !== 'default'" >
     <textarea placeholder="Description" ng-model="tagInput.description"></textarea>
   </label>
 </div>
