--- a/www/css/main.css
+++ b/www/css/main.css
@@ -3378,9 +3378,7 @@ p, .table, .alert, .carousel {
 =================================================================
 */
 
-.push-bit {
-  margin-bottom: 10px !important;
-}
+.push-bit {}
 
 .push {
   margin-bottom: 15px !important;
