--- a/www/css/style.css
+++ b/www/css/style.css
@@ -283,6 +283,7 @@ a:hover.home-cta {
 
 .home-tag-item button {
   margin: 0 !important;
+  font-size: 14px;
 }
 
 p.map-icon-holder {
@@ -407,17 +408,18 @@ button.is-loading-btn {
 }
 
 .location-feed .item-content > img:first-child {
-  border-radius: 0;
-  max-width: 110px;
-  max-height: 86px;
-  width: 110px;
-  height: 92px;
-  top: 0px;
+  max-width: 85px;
+  max-height: 65px;
+  width: 85px;
+  height: 65px;
+  top: 3px;
   left: 7px;
+  border-radius: 5px;
 }
 
 .location-feed .item-complex {
-  min-height: 76px;
+  min-height: 80px;
+  max-height: 80px;
 }
 
 .location-feed .item-complex .item-content {
@@ -425,10 +427,12 @@ button.is-loading-btn {
 }
 
 .location-feed .media-action-score {
-  max-width: 48px;
+  max-width: 55px;
   position: absolute;
   right: 0;
   top: 0;
+  border-left: solid 1px #ddd;
+  padding-left: 5px;
 }
 
 .location-feed .media-action-score i {
@@ -444,7 +448,7 @@ button.is-loading-btn {
 }
 
 .location-feed .item {
-  border-top: solid 2px rgba(32, 32, 32, 0.61);
+  border-top: solid 1px rgba(175, 175, 175, 0.61);
 }
 
 .location-feed .item:first-child {
@@ -482,6 +486,12 @@ button.is-loading-btn {
   font-size: 12px;
 }
 
+.checkin-action-btn {
+  position: absolute;
+  top: 8px;
+  right: 44px;
+}
+
 .content-header-media .header-section {
   background-color: transparent;
   padding-left: 113px;
@@ -506,7 +516,7 @@ button.is-loading-btn {
 }
 
 .location-feed .item-complex .item-content {
-  padding: 12px 61px 12px 125px;
+  padding: 12px 61px 12px 100px;
 }
 
 .notification-feed .media-action-score {
